--- a/src/main/resources/templates/line_manager.html
+++ b/src/main/resources/templates/line_manager.html
@@ -49,7 +49,7 @@ th, td {
           <div class="span5">
               <h2>
                   <img src="../../img/logo.png" style="height: 65px" />电网智能监控系统
-                  <span class="label label-default">1.00</span>
+                  <span class="label label-default">1.01</span>
               </h2>
           </div>
           <div class="span6 MENU">
@@ -70,7 +70,7 @@ th, td {
 				<ul class="nav nav-list bs-docs-sidenav">
 					<li class="nav-header">资源管理</li>
 					<li><a href="substation_manager">变电站管理</a></li>
-					<li><a href="">线路管理</a></li>
+					<li><a href="" class="btn-success">线路管理</a></li>
 					<li class="nav-header">设备管理</li>
 					<li><a href="low_voltage_switch_manager">低压开关管理</a></li>
 					<li><a href="high_voltage_switch_manager">高压开关管理</a></li>
