--- a/src/main/resources/templates/low_voltage_switch_manager.html
+++ b/src/main/resources/templates/low_voltage_switch_manager.html
@@ -44,7 +44,7 @@
         <div class="span5">
             <h2>
                 <img src="../../img/logo.png" style="height: 65px" />电网智能监控系统
-                <span class="label label-default">1.00</span>
+                <span class="label label-default">1.01</span>
             </h2>
         </div>
         <div class="span6 MENU">
@@ -67,7 +67,7 @@
             <li><a href="substation_manager">变电站管理</a></li>
             <li><a href="line_manager">线路管理</a></li>
             <li class="nav-header">设备管理</li>
-            <li><a href="low_voltage_switch_manager">低压开关管理</a></li>
+            <li><a href="low_voltage_switch_manager" class="btn-success">低压开关管理</a></li>
             <li><a href="high_voltage_switch_manager">高压开关管理</a></li>
             <li><a href="control_measure_switch_manager">无功补偿开关管理</a></li>
             <li><a href="">温度监控</a></li>
