--- a/src/main/resources/templates/substation_manager.html
+++ b/src/main/resources/templates/substation_manager.html
@@ -44,7 +44,7 @@ th, td {
           <div class="span5">
               <h2>
                   <img src="../../img/logo.png" style="height: 65px" />电网智能监控系统
-                  <span class="label label-default">1.00</span>
+                  <span class="label label-default">1.01</span>
               </h2>
           </div>
           <div class="span6 MENU">
@@ -64,7 +64,7 @@ th, td {
 			<div class="span2 container-fluid well sidebar-nav">
 				<ul class="nav nav-list bs-docs-sidenav">
 					<li class="nav-header">资源管理</li>
-					<li><a href="">变电站管理</a></li>
+					<li><a href="" class="btn-success">变电站管理</a></li>
 					<li><a href="line_manager">线路管理</a></li>
 					<li class="nav-header">设备管理</li>
 					<li><a href="low_voltage_switch_manager">低压开关管理</a></li>
