--- a/src/main/resources/templates/control_measure_switch_manager.html
+++ b/src/main/resources/templates/control_measure_switch_manager.html
@@ -40,7 +40,7 @@
           <div class="span5">
               <h2>
                   <img src="../../img/logo.png" style="height: 65px" />电网智能监控系统
-                  <span class="label label-default">1.00</span>
+                  <span class="label label-default">1.01</span>
               </h2>
           </div>
           <div class="span6 MENU">
@@ -64,7 +64,7 @@
 					<li class="nav-header">设备管理</li>
 					<li><a href="low_voltage_switch_manager">低压开关管理</a></li>
 					<li><a href="high_voltage_switch_manager">高压开关管理</a></li>
-					<li><a href="control_measure_switch_manager">无功补偿开关管理</a></li>
+					<li><a href="control_measure_switch_manager" class="btn-success">无功补偿开关管理</a></li>
           <li><a href="">温度监控</a></li>
 					<!--<li class="nav-header">事件管理</li>-->
 					<!--<li><a href="low_voltage_hitch_event_manager">低压开关故障事件</a></li>-->
