--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -32,7 +32,7 @@
 				<div class="span5">
 					<h2>
 						<img src="../../img/logo.png" style="height: 65px" />电网智能监控系统
-              <span class="label label-default">1.00</span>
+              <span class="label label-default">1.01</span>
 					</h2>
 				</div>
 				<div class="span6 MENU">
@@ -58,13 +58,20 @@
 					</select>
           <input id="search_node_key" class="span4" type="text" placeholder="请输入..." />
           <button id="searchNode" class="btn btn-primary"><i class="fa fa-search"></i></button>
-          <button id="Center" class="btn"><i class="fa fa-home"></i></button>
+
 				</div>
 				<div class="well sidebar-nav" style="height: 100%">
 					<ul id="treeDemo" class="ztree"></ul>
 				</div>
 			</div>
-			<div class="span9" id="baidu_map"></div>
+			<div class="span9" style="height: 100%;">
+        <div style="font-size: 18px">
+            <i class="fa fa-home" id="Center"></i>
+            &nbsp;
+            当前位置：<span id="show_line"></span>
+        </div>
+        <div id="baidu_map" style="width: 100%"></div>
+			</div>
 		</div>
 		
 		
