修改弹框的数据修复，以及处理修改事件

--- a/src/main/resources/templates/high_voltage_switch_manager.html
+++ b/src/main/resources/templates/high_voltage_switch_manager.html
@@ -255,6 +255,7 @@ th, td {
 		<div id="edit_switch_modal" class="modal hide fade" tabindex="-1"
 			role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 			<div class="modal-header">
+          <input type="text" style="display: none" id="inLineTime"/>
 				<button type="button" class="close" data-dismiss="modal"
 					aria-hidden="true">×</button>
 				<h3>编辑开关</h3>
