--- a/src/main/resources/templates/high_voltage_hitch_event_manager.html
+++ b/src/main/resources/templates/high_voltage_hitch_event_manager.html
@@ -64,7 +64,7 @@
           <div class="span5">
               <h2>
                   <img src="../../img/logo.png" style="height: 65px" />电网智能监控系统
-                  <span class="label label-default">1.01</span>
+                  <span class="label label-default">1.02</span>
               </h2>
           </div>
           <div class="span6 MENU">
@@ -86,6 +86,7 @@
 					<li class="nav-header">事件管理</li>
 					<li><a href="low_voltage_hitch_event_manager">低压开关故障事件</a></li>
 					<li><a href="high_voltage_hitch_event_manager" class="btn-success">高压开关故障事件</a></li>
+          <li><a href="all_switch_event">所有事件</a></li>
 					<li><a href="control_measure_hitch_event_manager">无功补偿开关故障事件</a></li>
 				</ul>
 			</div>
