--- a/src/main/resources/templates/all_switch_event.html
+++ b/src/main/resources/templates/all_switch_event.html
@@ -69,6 +69,8 @@
         <div class="span10 container">
             <table id="all_event" class="table table-bordered table-striped table-hover table-condensed success" width="100%">
                 <thead>
+                <td>开关名称</td>
+                <td>开关地址</td>
                 <td>报警时间</td>
                 <td>报警原因</td>
                 <td>报警相位</td>
