--- a/src/main/resources/templates/all_switch_event.html
+++ b/src/main/resources/templates/all_switch_event.html
@@ -61,7 +61,7 @@
                 <li class="nav-header">事件管理</li>
                 <li><a href="low_voltage_hitch_event_manager">低压开关故障事件</a></li>
                 <li><a href="high_voltage_hitch_event_manager">高压开关故障事件</a></li>
-                <li><a href="all_switch_event" class="btn-success">所有事件</a></li>
+                <li><a href="all_switch_event" class="btn-success">报警事件总览</a></li>
                 <li><a href="control_measure_hitch_event_manager">无功补偿开关故障事件</a></li>
             </ul>
         </div>
